--- a/composer.json
+++ b/composer.json
@@ -10,18 +10,16 @@
     }
   ],
   "require": {
-    "php": ">=7.1.3",
-    "it-bens/object-transformer": "^0.1",
+    "php": "^8.0",
+    "it-bens/object-transformer": "^0.2",
     "symfony/config": "^4.4|^5.0",
     "symfony/dependency-injection": "^4.4|^5.0",
     "symfony/http-kernel": "^4.4|^5.0"
   },
   "require-dev": {
     "captainhook/plugin-composer": "^5.3",
-    "phpunit/phpunit": "^7.5",
-    "roave/security-advisories": "dev-latest",
-    "it-bens/object-transformer-test-utilities": "*@dev",
-    "symfony/polyfill-php72": "^1.23"
+    "phpunit/phpunit": "^9.5",
+    "roave/security-advisories": "dev-latest"
   },
   "config": {
     "optimize-autoloader": true,
