--- a/docker/xdebug.ini
+++ b/docker/xdebug.ini
@@ -2,18 +2,15 @@
 ; enable the extension
 zend_extension=/usr/local/lib/php/extensions/{folder_version}/xdebug.so
 
-; enable debugging
-xdebug.remote_enable=1
-xdebug.remote_autostart=1
+; do NOT use the incoming IP address to connect back
+xdebug.discover_client_host=true
 ; use DNS entry to resolve the host instead
 ; @see https://docs.docker.com/docker-for-windows/networking/#i-cannot-ping-my-containers
-xdebug.remote_host=host.docker.internal
+xdebug.client_host=host.docker.internal
 ; use port 9003 on the remote host for connection
-xdebug.remote_port=9003
-
-xdebug.default_enable=1
-xdebug.show_exception_trace=1
-
+xdebug.client_port=9003
+; enable debugging
+xdebug.mode=debug
 xdebug.start_with_request=default
 xdebug.idekey=PHPSTORM
 ; increase connection timeout
